--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   height: 100%;
   font-size: 16px;
 }
@@ -8,12 +9,5 @@ body {
   font-family: 'Open Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #EBEBEB;
-  display: grid;
-  align-content: center;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  background-color: #ebebeb;
 }
