chore: cleanup of unused CRA + storybook structure

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #ebebeb;
 }
+
+#root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+  justify-content: center;
+}
