--- a/src/stories/select.scss
+++ b/src/stories/select.scss
@@ -27,6 +27,10 @@ $font-size-secondary: 14px;
     min-width: 150px;
     flex: 1;
     font-size: $font-size-primary;
+
+    &::placeholder {
+      color: #bbb;
+    }
   }
 
   &-value-input-container {
